dokumentacja backendu, testy jednostkowe kontrolerow i service