@@ -16,24 +16,42 @@ import java.io.IOException;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
+
+/**
+ * Filtr uwierzytelniania JWT, wykonywany raz dla każdego żądania.
+ * Odpowiada za:
+ * <ul>
+ *     <li>odczyt nagłówka Authorization,</li>
+ *     <li>weryfikację poprawności tokena JWT,</li>
+ *     <li>ustawienie informacji o użytkowniku w kontekście Spring Security.</li>
+ */
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private static final String AUTHORIZATION_HEADER = "Authorization";
     private static final String TOKEN_PREFIX = "Bearer ";
 
+    /**
+     * Przetwarza żądanie HTTP i filtruje je pod kątem poprawności tokena JWT.
+     * Jeśli token jest poprawny, ustawia kontekst uwierzytelnienia użytkownika.
+     *
+     * @param request      obiekt żądania HTTP
+     * @param response     obiekt odpowiedzi HTTP
+     * @param filterChain  łańcuch filtrów do kontynuowania przetwarzania
+     * @throws ServletException w przypadku błędu serwletu
+     * @throws IOException       w przypadku błędu wejścia/wyjścia
+     */
     @Override
     protected void doFilterInternal(HttpServletRequest request,
                                     HttpServletResponse response,
                                     FilterChain filterChain) throws ServletException, IOException {
-        
-        // ZAWSZE czyścimy kontekst na początku żądania
+
+        // Zawsze czyścimy kontekst bezpieczeństwa na początku
         SecurityContextHolder.clearContext();
-        
+
         String header = request.getHeader(AUTHORIZATION_HEADER);
         System.out.println("Authorization header: " + header);
 
         if (header == null || !header.startsWith(TOKEN_PREFIX)) {
-            // Brak tokena - przepuszczamy bez uwierzytelniania
             filterChain.doFilter(request, response);
             return;
         }
@@ -58,7 +76,6 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                 SecurityContextHolder.getContext().setAuthentication(authToken);
             }
         } catch (JwtException e) {
-            // BŁĄD KRYTYCZNY: Nie przepuszczamy żądania z nieprawidłowym tokenem!
             System.out.println("Invalid or expired JWT token: " + e.getMessage());
             response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Invalid token");
             return;
@@ -67,29 +84,34 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         filterChain.doFilter(request, response);
     }
 
-private List<SimpleGrantedAuthority> extractAuthorities(Claims claims) {
-    if (claims.containsKey("roles")) {
-        List<?> rawRoles = claims.get("roles", List.class);
-        List<String> roles = rawRoles.stream()
-                .map(Object::toString)
-                .collect(Collectors.toList());
-        System.out.println("Roles from token (list): " + roles);
+    /**
+     * Ekstrahuje role użytkownika z tokena JWT i przekształca je na uprawnienia Spring Security.
+     *
+     * @param claims ciało tokena JWT
+     * @return lista ról w postaci {@link SimpleGrantedAuthority}
+     */
+    private List<SimpleGrantedAuthority> extractAuthorities(Claims claims) {
+        if (claims.containsKey("roles")) {
+            List<?> rawRoles = claims.get("roles", List.class);
+            List<String> roles = rawRoles.stream()
+                    .map(Object::toString)
+                    .collect(Collectors.toList());
+            System.out.println("Roles from token (list): " + roles);
 
-        List<SimpleGrantedAuthority> authorities = roles.stream()
-                .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                .collect(Collectors.toList());
-        System.out.println("Extracted authorities: " + authorities);
-        return authorities;
-    } else if (claims.containsKey("role")) {
-        String role = claims.get("role").toString();
-        System.out.println("Role from token (single): " + role);
-        List<SimpleGrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role));
-        System.out.println("Extracted authorities: " + authorities);
-        return authorities;
-    } else {
-        System.out.println("No role(s) found in token.");
-        return Collections.emptyList();
+            List<SimpleGrantedAuthority> authorities = roles.stream()
+                    .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
+                    .collect(Collectors.toList());
+            System.out.println("Extracted authorities: " + authorities);
+            return authorities;
+        } else if (claims.containsKey("role")) {
+            String role = claims.get("role").toString();
+            System.out.println("Role from token (single): " + role);
+            List<SimpleGrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role));
+            System.out.println("Extracted authorities: " + authorities);
+            return authorities;
+        } else {
+            System.out.println("No role(s) found in token.");
+            return Collections.emptyList();
+        }
     }
-}
-
 }
